--- a/css/bar_pensiun.css
+++ b/css/bar_pensiun.css
@@ -106,7 +106,7 @@ meter::-moz-meter-bar {
 .swatch {
   
   margin: 0; padding:0;
-  margin: 5em auto;
+  margin: 5% auto;
   list-style-type: none;
   width: 100%;
   display: block;
